; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_throttle_info_mount_reset_period.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_throttle_info_mount_reset_period.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._throttle_io_info_t = type { i32 }
%struct.TYPE_3__ = type { i64, %struct._throttle_io_info_t* }

@_throttle_io_info = common dso_local global %struct._throttle_io_info_t* null, align 8
@LOWPRI_MAX_NUM_DEV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @throttle_info_mount_reset_period(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct._throttle_io_info_t*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = icmp eq %struct.TYPE_3__* %6, null
  br i1 %7, label %8, label %14

8:                                                ; preds = %2
  %9 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** @_throttle_io_info, align 8
  %10 = load i32, i32* @LOWPRI_MAX_NUM_DEV, align 4
  %11 = sub nsw i32 %10, 1
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %9, i64 %12
  store %struct._throttle_io_info_t* %13, %struct._throttle_io_info_t** %5, align 8
  br label %30

14:                                               ; preds = %2
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  %17 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %16, align 8
  %18 = icmp eq %struct._throttle_io_info_t* %17, null
  br i1 %18, label %19, label %25

19:                                               ; preds = %14
  %20 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** @_throttle_io_info, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %20, i64 %23
  store %struct._throttle_io_info_t* %24, %struct._throttle_io_info_t** %5, align 8
  br label %29

25:                                               ; preds = %14
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 1
  %28 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %27, align 8
  store %struct._throttle_io_info_t* %28, %struct._throttle_io_info_t** %5, align 8
  br label %29

29:                                               ; preds = %25, %19
  br label %30

30:                                               ; preds = %29, %8
  %31 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %5, align 8
  %32 = load i32, i32* %4, align 4
  %33 = call i32 @throttle_init_throttle_period(%struct._throttle_io_info_t* %31, i32 %32)
  ret void
}

declare dso_local i32 @throttle_init_throttle_period(%struct._throttle_io_info_t*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
